# VSEPR-SIM

./: .flowerrc  .gitattributes  .gitignore  .vsepr_initialized  2025-07-16_cleaning_log.csv  ALL_FEATURES_INTEGRATED.md  BATCH_FILES_REFERENCE.md  BUILD_FIX_SUMMARY.md  BUILD_INSTRUCTIONS.md  BUILD_STATUS_20260117.md  BUILD_SUCCESS_REPORT.md  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.backup  CODE_ARCHITECTURE_CONTINUOUS.md  COLOUR_PILLAR_RELEASE.md  COMPLETION_SUMMARY.md  CONTINUOUS_GENERATION_ARCHITECTURE.md  CONTRIBUTING-DEPRECATION.md  CORRECTED_VISUALIZATION_ARCHITECTURE.md  DEFAULT_MD.md  DELIVERY_COMPLETE.md  DOCUMENTATION_INDEX.md  EXPERIMENTAL_README.md  FIRST_RUN.md  FlowerAI_Launcher.ps1  GUI_ARCHITECTURE_COMPLETE.md  INTEGRATION_ARCHITECTURE.md  INTEGRATION_COMPLETE.txt  ISSUE_7_RESOLUTION_CONFIRMED.md  LICENSE  MATERIALS_SCIENCE_REFERENCE.md  MULTISCALE_INTEGRATION_COMPLETE.md  OPENGL_QUICK_REFERENCE.md  ORCHESTRATOR_README.md  PackageVerification  QUICKBUILD.md  QUICKREF_GUI.md  QUICK_REFERENCE_CONTINUOUS.md  QUICK_REFERENCE_UNIVERSAL.txt  (+70 more)
apps/: atomistic.cpp  (+80 more)
atomistic/: CMakeLists.txt
atomistic/analysis/: pmf.cpp  pmf.hpp  property_scraper.hpp
atomistic/classify/: cluster.cpp  cluster.hpp  fingerprints.cpp  fingerprints.hpp  organic_candidate.hpp
atomistic/compilers/: xyz_compiler.cpp  xyz_compiler.hpp
atomistic/core/: alignment.cpp  alignment.hpp  empirical_reference.hpp  environment.hpp  fragment_view.hpp  layer_manifest.hpp  linalg.cpp  linalg.hpp  maxwell_boltzmann.cpp  maxwell_boltzmann.hpp  phase_model.hpp  physics_status.hpp  state.hpp  state_c.hpp  statistics.hpp  thermodynamics.hpp
atomistic/crystal/: crystal_metrics.cpp  crystal_metrics.hpp  lattice.cpp  lattice.hpp  reference_data.hpp  supercell.cpp  supercell.hpp  unit_cell.cpp  unit_cell.hpp
atomistic/datasets/: emergence_dataset.hpp
atomistic/integrators/: fire.cpp  fire.hpp  velocity_verlet.cpp  velocity_verlet.hpp
atomistic/kinetic/: formation_kinetics.hpp
atomistic/models/: alpha_calibrator.hpp  alpha_model.hpp  alpha_model_ext.hpp  alpha_stability.hpp  atomic_descriptors.hpp  atomic_descriptors_ext.hpp  bonded.cpp  bonded.hpp  composite.cpp  composite.hpp  env_particle.hpp  lj_coulomb.cpp  model.hpp  nuclear_stability.hpp  polarization_scf.cpp  polarization_scf.hpp  wind_particle.hpp
atomistic/parsers/: xyz_parser.cpp  xyz_parser.hpp
atomistic/predict/: properties.cpp  properties.hpp
atomistic/reaction/: causal.cpp  causal.hpp  discovery.cpp  discovery.hpp  discovery_viz.cpp  discovery_viz.hpp  engine.cpp  engine.hpp  heat_gate.cpp  heat_gate.hpp
atomistic/report/: report_md.cpp  report_md.hpp
atomistic/research/: deep_research.hpp
atomistic/tui/: crystal_tui.cpp  crystal_tui.hpp  element_render.hpp  flower_health.hpp  frame_renderer.hpp  projection.hpp
atomistic/validation/: clean_gate.hpp  experiment_match.cpp  experiment_match.hpp  nanoparticle_ref.hpp
bridge_beta/: CMakeLists.txt  README.md  VERSION_BETA.md
bridge_beta/coarsegrain_3d_new/: cg3d_prerender.cpp  cg3d_prerender.hpp
bridge_beta/dnf_sim/: dnf_sim.cpp  dnf_sim.hpp
coarse_grain/: CMakeLists.txt
coarse_grain/analysis/: ensemble_proxy.hpp  macro_precursor.hpp  property_calibration.hpp  property_pipeline.hpp
coarse_grain/chemistry/: reaction.hpp  reaction_engine.hpp  reaction_library.hpp  species.hpp
coarse_grain/core/: bead.hpp  bead_system.hpp  bit32_identity.hpp  channel_kernels.hpp  environment_state.hpp  inertia_frame.hpp  multi_channel_descriptor.hpp  orientation.hpp  sh_rotation.hpp  spherical_harmonics.hpp  surface_descriptor.hpp  unified_descriptor.hpp
coarse_grain/database/: compound_record.hpp  demo_entries.hpp  input_record.hpp  material_record.hpp  precursor_record.hpp  seed_hash.hpp
coarse_grain/fire_smooth/: README.md  fire_smooth_runner.hpp  smooth_sample.hpp
coarse_grain/level3/: README.md  level3_bead.hpp  level3_builder.hpp  level3_handoff.hpp
coarse_grain/mapping/: atom_to_bead_mapper.hpp  fragment_bridge.hpp  mapping_rule.hpp  multi_channel_mapper.hpp  surface_mapper.hpp
coarse_grain/metals/: energetic_signature.hpp  metal_fire_params.hpp  metal_registry.hpp  metal_reporter.hpp  metal_sim_builder.hpp  radiation_interaction.hpp  scattering_pattern.hpp
coarse_grain/models/: adaptive_refinement.hpp  anisotropic_potential.hpp  bead_fire.hpp  descriptor_residual.hpp  environment_coupling.hpp  hourglass_model.hpp  interaction_engine.hpp  layer_boundary.hpp  lj_bead_helper.hpp  lookglass_model.hpp  model_selector.hpp  multi_channel_potential.hpp  orientation_potential.hpp  seed_bead_stepper.hpp  unified_potential.hpp
coarse_grain/qm/: README.md  qm_descriptors.hpp
coarse_grain/report/: bead_fire_csv_export.hpp  bead_fire_report.hpp  excel_export.hpp  formation_report.hpp  mapping_report.hpp  metal_gas_study.hpp  snapshot_graph.hpp  solidworks_export.hpp
coarse_grain/theory/: energy_decomposition.hpp  graph_topology.hpp  material_kernel.hpp
coarse_grain/vis/: bead_inspector_view.hpp  bead_visual_record.hpp  cg_split_view.hpp  cg_viz_viewer.hpp  seed_bead_viewer.hpp
sim/ehd/: CMakeLists.txt  ehd.hpp  ehd_types.hpp  run_card.hpp
tests/: CMakeLists.txt  alias_tests.cpp  alkane_torsion_tests.cpp  angle_tests.cpp  basic_isomer_validation.cpp  basic_molecule_validation.cpp  bead_fire_report_test.cpp  bench_ehd.cpp  bench_gpu_cpu.cpp  butane_scan.cpp  chemistry_basic_test.cpp  chemistry_universal_test.cpp  chemistry_validation_test.cpp  cli_integration.bats  command_parser_test.cpp  conformer_test.cpp  energy_model_v03_test.cpp  energy_tests.cpp  ensemble_consistency_test.cpp  formula_builder_simple_test.cpp  formula_builder_tests.cpp  formula_fuzz_tester.cpp  geom_ops_tests.cpp  integration_tests.bats  isomer_test.cpp  nacl_ewald_empirical.cpp  optimizer_tests.cpp  pbc_phase2_physics.cpp  pbc_phase4_perf.cpp  pbc_phase5_golden.cpp  pbc_phase5_regression.cpp  pbc_test.cpp  pbc_verification.cpp  phase2_complex_molecules.cpp  phase2_test.sh  phase3_isomer_ci.sh  phase3_isomer_validation.cpp  phase3_test.sh  phase4_coordination_variants.cpp  phase5_ionic_manifold.cpp  (+118 more)
(+17714 files in other folders)
